[workspace]
members = ["honeybee", "graft", "mayfly", "bulb", "rendzina"]
resolver = "2"

[workspace.package]
version = "5.50.0"
edition = "2021"

[workspace.dependencies]
env_logger = { version = "0.11", default_features = false }
log = "0.4"
ntcip = "0.12"

[patch.crates-io]

[profile.web]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
