[workspace]
members = ["honeybee", "mayfly", "bulb", "rendzina", "resources"]
resolver = "2"

[workspace.package]
version = "5.68.0"
edition = "2024"

[workspace.dependencies]
bb8 = "0.9"
bb8-postgres = "0.9"
chrono = "0.4"
env_logger = { version = "0.11", default-features = false }
http = "1"
log = "0.4"
ntcip = "0.13"
thiserror = "2"
tokio-postgres = "0.7"

[workspace.dependencies.axum]
version = "0.8"
features = ["http2"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.0"
default-features = false
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"]

[workspace.dependencies.cidr]
version = "0.2"
features = ["serde"]

[patch.crates-io]

[profile.web]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
