[workspace]
members = ["honeybee", "mayfly", "bulb", "rendzina", "resin", "resources", "pollinator"]
default-members = ["honeybee", "mayfly"]
resolver = "2"

[workspace.package]
version = "5.80.3"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
bb8 = "0.9"
bb8-postgres = "0.9"
chrono = "0.4"
env_logger = { version = "0.11", default-features = false }
futures = { version = "0.3", default-features = false }
gift = "0.11"
http = "1"
jiff = "0.2.16"
log = "0.4"
mag = "0.6"
ntcip = "0.14.1"
pix = "0.14"
serde_json = "1"
thiserror = "2"
tokio-postgres = "0.7"
tokio-tungstenite = "0.28"
tungstenite = "0.28"
whoami = "1"

[workspace.dependencies.axum]
version = "0.8"
features = ["http2"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.48.0"
default-features = false
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"]

[workspace.dependencies.tokio-stream]
version = "0.1"
features = ["time"]

[workspace.dependencies.cidr]
version = "0.3"
features = ["serde"]

[patch.crates-io]

[profile.web]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
