[package]
name = "bulb"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
console_error_panic_hook = "0.1"
humantime = "2.1"
mag = "0.5"
ntcip = "0.8"
percent-encoding = "2"
rendzina = { path = "../rendzina" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'HtmlCollection',
  'HtmlElement',
  'Window',
  'Event',
  'Headers',
  'HtmlButtonElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ScrollBehavior',
  'ScrollIntoViewOptions',
  'ScrollLogicalPosition',
  'TransitionEvent',
]
