[package]
name = "bulb"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
cidr = { workspace = true }
console_error_panic_hook = "0.1"
gift = "0.11"
hatmil = "0.8.0"
humantime = "2.1"
js-sys = "0.3"
mag = "0.6"
ntcip = { workspace = true }
percent-encoding = "2"
pix = "0.14"
rendzina = { path = "../rendzina" }
resources = { path = "../resources" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.futures]
version = "0.3"
default-features = false
features = [
  'alloc'
]

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Blob',
  'CustomEvent',
  'Document',
  'HtmlCollection',
  'HtmlElement',
  'Window',
  'Event',
  'EventSource',
  'Headers',
  'HtmlButtonElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'MessageEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ScrollBehavior',
  'ScrollIntoViewOptions',
  'ScrollLogicalPosition',
  'TransitionEvent',
]
