[package]
name = "graft"
description = "Web Server for proxying IRIS sonar objects"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-std = { version="1.8", features=["attributes", "tokio1"] }
convert_case = "0.5"
env_logger = { workspace = true }
log = { workspace = true }
percent-encoding = "2"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rand = "0.8"
rustls = { version="0.19", features=["dangerous_configuration"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tide = "0.16"
webpki = "0.21"
whoami = "1"

[dependencies.async-tls]
version = "0.11"
default-features = false
features = ["client"]
