[package]
name = "graft"
description = "Web Server for proxying IRIS sonar objects"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
bb8 = "0.8"
bb8-postgres = "0.8"
convert_case = "0.5"
env_logger = { workspace = true }
headers = "0.4"
http = "1"
log = { workspace = true }
percent-encoding = "2"
rand = "0.8"
rustls = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio-postgres = "0.7"
tokio-rustls = "0.25"
tower-sessions = "0.10"
tower-sessions-moka-store = "0.10"
whoami = "1"

[dependencies.axum-extra]
version = "0.9"
features = ["typed-header"]

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"]
