[package]
name = "honeybee"
description = "REST API backend for IRIS"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
argh = "0.1"
axum = { workspace = true }
bb8 = { workspace = true }
bb8-postgres = { workspace = true }
cidr = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
headers = "0.4"
heck = "0.5"
http = { workspace = true }
loam = "0.4"
log = { workspace = true }
mvt = "0.10"
ntcip = { workspace = true }
percent-encoding = "2"
pointy = "0.7"
rendzina = { path = "../rendzina" }
resin = { path = "../resin" }
resources = { path = "../resources" }
rosewood = "0.4"
rustls = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-rustls = "0.26"
tokio-stream = { workspace = true }
tokio-util = "0.7"
tower-sessions-moka-store = "0.15"
whoami = { workspace = true }

[dependencies.tower-sessions]
version = "0.14"
default-features = false
features = ["axum-core"]

[dependencies.axum-extra]
version = "0.10"
features = ["typed-header"]

[dependencies.postgres-types]
version = "0.2"
features = ["with-cidr-0_3"]

[dev-dependencies]
anyhow = "1.0"
