[package]
name = "mayfly"
version.workspace = true
edition.workspace = true
default-run = "mayfly"

[dependencies]
argh = "0.1"
chrono = { workspace = true }
env_logger = { workspace = true }
http = "1"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }

[dependencies.axum]
version = "0.7"
features = ["http2"]

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "time"]
