[package]
name = "mayfly"
version.workspace = true
edition.workspace = true
default-run = "mayfly"

[dependencies]
argh = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
http = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "time"]

[dev-dependencies]
ureq = "3.1"
