[package]
name = "mayfly"
description = "Traffic data server for IRIS"
version.workspace = true
edition.workspace = true
default-run = "mayfly"

[dependencies]
argh.workspace = true
axum.workspace = true
env_logger.workspace = true
http.workspace = true
log.workspace = true
resin = { path = "../resin" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "time"]

[dev-dependencies]
ureq = "3.1"
