[package]
name = "pollinator"
description = "Polling server for IRIS"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
argh = "0.1"
bb8 = { workspace = true }
bb8-postgres = { workspace = true }
bytes = "1.11"
env_logger = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1.8", features = ["client", "http1"] }
jiff = "0.2.16"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
whoami = "1"

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["sink", "std"]

[dependencies.tokio]
version = "1.48.0"
default-features = false
features = ["fs", "io-util", "io-std", "macros", "net", "rt-multi-thread"]
