[package]
name = "pollinator"
description = "Polling server for IRIS"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
argh.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true
bytes = "1.11.1"
env_logger.workspace = true
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["http1", "client-legacy", "tokio"] }
hyper = { version = "1.8", features = ["client", "http1"] }
hyper-tls = "0.6"
jiff.workspace = true
log.workspace = true
resin = { path = "../resin" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
whoami.workspace = true
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["sink", "std"]
