[package]
name = "rendzina"
description = "Library for rendering DMS messages"
license = "GPL-2.0-or-later"
version.workspace = true
edition.workspace = true

[dependencies]
fstr = "0.2"
gift.workspace = true
log.workspace = true
ntcip.workspace = true
pix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
